...
        }}
      >
        <Tabs.Screen
          name="files"
          options={{
            title: t('drive.myDrive'),
            tabBarButtonTestID: 'tab-files',
            tabBarIcon: ({ color }) => (
              <CozyIcon name="cloudOutline" color={color} size={TAB_ICON_SIZE} />
            )
          }}
        />
        <Tabs.Screen
...
